hopefully this fixes abilty to see the popup-content on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -278,7 +278,7 @@ footer {
 }
 
 .popup-content{
-  max-width: 70%; 
+  max-width: 100%; 
   box-sizing: border-box; 
   overflow-wrap: break-word;
 }
@@ -295,7 +295,7 @@ footer {
 
   .leaflet-popup-content-wrapper {
     width: 80%; 
-    max-width: none; 
+    max-width: 80%; 
     padding: 8px; 
     margin: 0 auto; 
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); 
